# Exact-Tesselation-Extraction

./: README.md  pyproject.toml
data/: data.json
notebooks/: tessellation_demo.ipynb
notebooks/.ipynb_checkpoints/: tessellation_demo-checkpoint.ipynb
